made home page, force user auth :D

--- a/src/pages/login.ejs
+++ b/src/pages/login.ejs
@@ -73,6 +73,7 @@
 
             <input type="submit" value="Login" disabled>
         </form>
+        <a href="/register" style="color: rgb(212, 56, 56)"><p style="color: rgb(212, 56, 56); text-align: center;">Or signup!</p></a>
     </div>
 </body>
 </html>
