--- a/src/pages/register.ejs
+++ b/src/pages/register.ejs
@@ -73,6 +73,7 @@
 
             <input type="submit" value="Signup" disabled>
         </form>
+        <a href="/login" style="color: rgb(212, 56, 56)"><p style="color: rgb(212, 56, 56); text-align: center;">Or login!</p></a>
     </div>
 </body>
 </html>
