--- a/src/pages/login.ejs
+++ b/src/pages/login.ejs
@@ -58,9 +58,7 @@
     <div id="form">
         <h1>Login</h1>
         <noscript>
-            <a href="https://www.enable-javascript.com/" style="text-decoration-color: rgb(212, 56, 56);">
-                <p style="color: rgb(212, 56, 56); text-align: center;">This app doesnt work without js :(</p>
-            </a>
+            <p style="text-align: center;"><a href="https://www.enable-javascript.com/">This app doesnt work without js :(</a></p>
         </noscript>
         <form action="" id="form">
             <label for="username">Username:</label><br>
@@ -73,7 +71,7 @@
 
             <input type="submit" value="Login" disabled>
         </form>
-        <a href="/register" style="color: rgb(212, 56, 56)"><p style="color: rgb(212, 56, 56); text-align: center;">Or signup!</p></a>
+        <p style="color: rgb(212, 56, 56); text-align: center;"><a href="/register">Or signup!</a></p>
     </div>
 </body>
 </html>
