--- a/src/pages/projects.ejs
+++ b/src/pages/projects.ejs
@@ -10,6 +10,8 @@
 </head>
 <body>
     <h1>Projects</h1>
+    <a href="/projects/create">Create Project</a>
+    <br>
     <% projects.forEach(element => { %>
         <p>
             <a href="<%= element.link %>"><%= element.name %></a>
