removed debug handle

--- a/src/pages/create-project.ejs
+++ b/src/pages/create-project.ejs
@@ -96,19 +96,10 @@
                 <caption>User Permissions</caption>
                 <thead>
                     <tr>
-                        <th>User</th>
+                        <th>Permissions</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Alice</td>
-                    </tr>
-                    <tr>
-                        <td>Bob</td>
-                    </tr>
-                    <tr>
-                        <td>Charlie</td>
-                    </tr>
                 </tbody>
                 <script>
                     function add(){
