--- a/src/pages/projects.ejs
+++ b/src/pages/projects.ejs
@@ -10,8 +10,10 @@
 </head>
 <body>
     <h1>Projects</h1>
+    <h2>Tools:</h2>
     <a href="/projects/create">Create Project</a>
     <br>
+    <h2>Projects</h2>
     <% projects.forEach(element => { %>
         <p>
             <a href="<%= element.link %>"><%= element.name %></a>
