added a sample user settings page

--- a/src/pages/user-settings.ejs
+++ b/src/pages/user-settings.ejs
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    <% tokens.forEach(element => { %>
-     <p><%= JSON.stringify(element) %></p>
-    <% }) %>
+    <h1>logged in tokens</h1>
+    <p>
+        <span class="cdevice">(Current device)</span>
+        <span class="id">[1111]</span>
+        <span class="timestamp">[8/31/25]</span>
+        - <a href="#">Logout session</a>
 </body>
 </html>
