--- a/src/pages/register.ejs
+++ b/src/pages/register.ejs
@@ -96,7 +96,7 @@ function toToast(msg){
 let form = document.getElementById("form");
 
 let username = document.getElementById("t_username");
-let password = document.getElementById("t_username");
+let password = document.getElementById("t_password");
 
 let submit = document.querySelector("form input[type=\"submit\"]:disabled")
 
