--- a/src/pages/projects.ejs
+++ b/src/pages/projects.ejs
@@ -22,7 +22,7 @@
         <p>
             <a href="#" onclick="javascript:_delete(<%= element.id %>)">> Delete</a>
             <a href="#" onclick="javascript:_modify(<%= element.id %>)">> Modify</a>
-            <a href="#" onclick="javascript:_modify(<%= element.id %>)">> View</a>
+            <a href="<%= element.link %>">> View</a>
         </p>
         <br>
     <% }) %>
