--- a/src/pages/register.ejs
+++ b/src/pages/register.ejs
@@ -98,7 +98,7 @@ let form = document.getElementById("form");
 let username = document.getElementById("t_username");
 let password = document.getElementById("t_password");
 
-let submit = document.querySelector("form input[type=\"submit\"]:disabled")
+let submit = document.querySelector("form input[type=\"submit\"]")
 
 document.addEventListener("DOMContentLoaded",e=>{
     submit.disabled = false;
