--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -1,13 +1,12 @@
-body,html{
+.container {
     text-align: center;
-    width: 100%;
-    height: 100%;
 }
-body *{
+.container h1 {
     margin: 0 auto;
-}
-h1{
     padding-block: 10px;
+}
+.container p.token {
+    margin: 10px auto;
 }
 p.token{
     background-color: rgb(10, 10, 10);
